# chesspp

./: CMakeLists.txt  main.cpp
include/: ChessUtils.h  Minimax.h  Move.h  PGNMove.h  Utils.h
src/: ChessUtils.cpp  Minimax.cpp  Utils.cpp
tests/: CMakeLists.txt  VerifyMoveTest.cpp
